part1/LogOutput/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/logs"
        backend:
          service:
            name: logoutput-svc
            port: 
              number: 1235
